--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,7 +37,7 @@ element {
   margin-top: 5px;
 }
 
-.custom-navbar-logo {
+.safesquid-navbar-logo {
   height: 20px !important; /* Adjust as needed */
   margin-top: 5px;
 }
